# templates-flask

./: README.md  pyproject.toml
templates_flask/: app.py
templates_flask/static/: contato.css  footer.css  global.css  header.css  themes.css
templates_flask/templates/: base-layout.html  como-usar.html  contato.html  footer-layout.html  header-layout.html  home.html  main-layout.html  paper-layout.html  politica-de-privacidade.html  produtos.html  termos-de-uso.html
