[tool.poetry]
name = "templates-flask"
version = "0.1.0"
description = ""
authors = ["Julio Estrela <julioantunesestrela13@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
